syntax = "proto3";

package vendor;

option csharp_namespace = "VendorProto";
option go_package = "github.com/GroceryOptimizer/store/proto;vendor";

service VendorService{
  rpc SendMessage (SendMessageRequest) returns (SendMessageReply);
  rpc Products (InventoryRequest) returns (InventoryReply);
  rpc Store (StoreRequest) returns (StoreReply);
}

message SendMessageRequest{
  string message = 1;
}

message SendMessageReply{
  string reply = 1;
}

message Product{
  string name = 1;
}

message InventoryRequest{
  repeated Product shoppingCart = 1;
}

message StockItem{
  string name = 1;
  int32 price = 2;
}

message InventoryReply{
  repeated StockItem stockItems = 1;
}

message Coordinates {
  float latitude = 1;
  float longitude = 2;
}

message Store {
  string id = 1;
  string name = 2;
  Coordinates coordinates = 3;
}

message StoreRequest {
  string message = 1;
}

message StoreReply {
  Store store = 1;
}